# sparknetworks/src/main/java/com/sparknetworks/filterhandler/services/FilterService.java
@@ -2,8 +2,11 @@ package com.sparknetworks.filterhandler.services;
 
 import java.util.List;
 
+import com.sparknetworks.model.LoginRequestModel;
 import com.sparknetworks.model.PersonDetailsModel;
 
 public interface FilterService {
 	List<PersonDetailsModel> getAll();
+
+	PersonDetailsModel login(LoginRequestModel request);
 }
