# sparknetworks/src/main/java/com/sparknetworks/filterhandler/services/Impl/FilterServiceImpl.java
@@ -5,8 +5,10 @@ import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import com.sparknetworks.filterhandler.exceptions.DataNotFoundException;
 import com.sparknetworks.filterhandler.feignclient.FilterMatchingAPI;
 import com.sparknetworks.filterhandler.services.FilterService;
+import com.sparknetworks.model.LoginRequestModel;
 import com.sparknetworks.model.PersonDetailsModel;
 
 @Service
@@ -14,10 +16,21 @@ public class FilterServiceImpl implements FilterService {
 
 	@Autowired
 	private FilterMatchingAPI api;
+
+	
 	@Override
 	public List<PersonDetailsModel> getAll() {
-		System.out.println(api.getAll());
-		return null;
+		try {
+			return api.getAll().getMatches();
+		} catch (NullPointerException e) {
+			throw new DataNotFoundException("Data not recieved from service", e);
+		}
+	}
+
+
+	@Override
+	public PersonDetailsModel login(LoginRequestModel request) {
+		return api.login(request);
 	}
 
 }
