# sparknetworks/src/main/java/com/sparknetworks/filterhandler/utils/Const.java
@@ -2,9 +2,15 @@ package com.sparknetworks.filterhandler.utils;
 
 public class Const {
 
+	public static final String HOME_PAGE_URL = "/home";
+	public static final String LOGIN_OP_URL = "/login";
+	public static final String LOGIN_PAGE_URL = "/";
 	public static final String MAIN_PAGE = "main";
 	public static final String SPARK_FILTER_MATCHER_BACKEND = "spark-networks-backend";
-
+	public static final String SPARK_COMPONENT_SCAN_PATH = "com.sparknetworks.filterhandler";
+	public static final String PERSON_DETAILS_LIST_KEY = "personDetails";
+	public static final String LOGIN_PAGE = "login";
+	
 	private Const() {
 
 	}
